--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@
 
 # Visual Studio cache directory
 .vs/
+.vsconfig
+.idea
 
 # Gradle cache directory
 .gradle/
@@ -70,3 +72,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+*/Temp/UnityLockfile
