--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-*/Temp/UnityLockfile
+/StrartedProject/Temp/UnityLockfile
