--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 /StrartedProject/Temp/UnityLockfile
+
+local.properties
+**/proguard/
+*.log
